objects/Customer_Success_Management__c.object
<CustomObject>
    <fields>
        <fullName>CSM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Success_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Temperature__c</fullName>
        <description>This field will track the customer sentiment.</description>
        <inlineHelpText>This field will track the customer sentiment.</inlineHelpText>
        <label>Customer Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upset</fullName>
                    <color>#FF0000</color>
                    <label>Upset</label>
                </value>
                <value>
                    <fullName>Concerned</fullName>
                    <color>#FFFF66</color>
                    <label>Concerned</label>
                </value>
                <value>
                    <fullName>Calm</fullName>
                    <color>#66FF99</color>
                    <label>Calm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <description>This field will house the email distribution list for the CSAT record.</description>
        <inlineHelpText>This field will house the email distribution list for the CSAT record.</inlineHelpText>
        <label>Distribution List</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Genesys_Care__c</fullName>
        <description>This field will indicate the level of Genesys Care.</description>
        <inlineHelpText>This field will indicate the level of Genesys Care.</inlineHelpText>
        <label>Genesys Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Care</fullName>
                </value>
                <value>
                    <fullName>Premium Care</fullName>
                </value>
                <value>
                    <fullName>Flex Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Support_Group__c</fullName>
        <label>Owner Support Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Care_End__c</fullName>
        <label>Premium Care End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Care_Start__c</fullName>
        <label>Premium Care Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Success Management (Sold To Account)</relationshipLabel>
        <relationshipName>Customer_Success_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field will demonstrate the status of the CSM engagement.</description>
        <inlineHelpText>This field will demonstrate the status of the CSM engagement.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Success Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Temperature__c</columns>
        <columns>CSM_Owner__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Genesys_Care__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_CSM_Engagements</fullName>
        <columns>NAME</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Customer_Temperature__c</columns>
        <columns>Genesys_Care__c</columns>
        <columns>CSM_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Open CSM Engagements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSM_Detail_View</fullName>
        <columns>NAME</columns>
        <columns>CSM_Owner__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Genesys_Care__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Genesys_Care__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Active CSM Engagements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSM-{00000}</displayFormat>
        <label>Customer Success Management</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Success Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>